# Create-svg-file-with-Cpp

./: CMakeLists.txt  README.md
data/: Circle1.txt  Polygon1.txt  Rectangle1.txt
src/: draw_svg.cpp  draw_svg.hpp  file.cpp  file.hpp  object.cpp  object.hpp  test_draw_svg.cpp
